--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8
   pool: 5
   username: edsaccess
-  password: Fiebrao04
+  password: <%= ENV['EDSACCESS_PW'] %>
   socket: /var/run/mysqld/mysqld.sock
 
 development:
