--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -4,8 +4,13 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
+one:
+  Bnum: B00123456
+  FirstName: Dennis
+  MiddleName: William
+  LastName: Stone
+  PrevLast: Rivera
+  ProgStatus: Candidate
+  
 two: {}
 #  column: value
