--- a/test/fixtures/banner_terms.yml
+++ b/test/fixtures/banner_terms.yml
@@ -4,8 +4,14 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+#
 # column: value
 #
-two: {}
+#
 #  column: value
+
+term:
+  PlainTerm: Fall 2015
+  StartDate: <%= Date.strptime("09/01/2015", "%m/%d/%Y") %>
+  EndDate: <%= Date.strptime("12/31/2015", "%m/%d/%Y") %>
+  AYStart: 2015
