--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -4,13 +4,16 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one:
-  Bnum: B00123456
-  FirstName: Dennis
-  MiddleName: William
-  LastName: Stone
-  PrevLast: Rivera
-  ProgStatus: Candidate
-  
-two: {}
+#
 #  column: value
+
+base: &base
+  FirstName: Jacob
+  LastName: Stoebel
+  AltID: 1
+
+
+candidate:
+  <<: *base
+  ProgStatus: Candidate
+  AltID: 2
