--- a/test/fixtures/banner_terms.yml
+++ b/test/fixtures/banner_terms.yml
@@ -11,7 +11,15 @@
 #  column: value
 
 term:
+  BannerTerm: 201511
   PlainTerm: Fall 2015
   StartDate: <%= Date.strptime("09/01/2015", "%m/%d/%Y") %>
   EndDate: <%= Date.strptime("12/31/2015", "%m/%d/%Y") %>
+  AYStart: 2015
+
+next_term: 
+  BannerTerm: 201512
+  PlainTerm: Spring 2016
+  StartDate: <%= Date.strptime("01/01/2016", "%m/%d/%Y") %>
+  EndDate: <%= Date.strptime("06/01/2016", "%m/%d/%Y") %>
   AYStart: 2015
