--- a/test/fixtures/adm_sts.yml
+++ b/test/fixtures/adm_sts.yml
@@ -9,3 +9,11 @@
 #
 #
 #  column: value
+base_app: &base
+  student: candidate
+  BannerTerm_BannerTerm: 201511
+  Attempt: 1
+  STAdmitted: true
+  OverallGPA: 2.75
+  CoreGPA: 3.0 
+  letter_file_name: "letter.docx"
