tests for issue update model

--- a/test/fixtures/issue_updates.yml
+++ b/test/fixtures/issue_updates.yml
@@ -9,3 +9,10 @@
 #
 #
 #  column: value
+
+one:
+  CreateDate: <%= Date.today %>
+  UpdateName: Update1
+  Description: Update1 Description
+  issue: one
+  tep_advisors_AdvisorBnum: "B00123456"  
