--- a/test/fixtures/issue_updates.yml
+++ b/test/fixtures/issue_updates.yml
@@ -10,9 +10,11 @@
 #
 #  column: value
 
-one:
-  CreateDate: <%= Date.today %>
+<% 2.times do |i| %>
+<%="issue_update#{i}:" %>
+  CreateDate: <%= Date.today + i %>
   UpdateName: Update1
   Description: Update1 Description
   issue: one
-  tep_advisors_AdvisorBnum: "B00123456"  
+  tep_advisors_AdvisorBnum: "B00123456"
+<% end %>
