model tests for praxis result

--- a/test/fixtures/praxis_results.yml
+++ b/test/fixtures/praxis_results.yml
@@ -9,3 +9,10 @@
 #
 #
 #  column: value
+one:
+  Bnum: candidate
+  praxis_test: one
+  TestDate: <% Date.today %>
+  RegDate: <% Date.today %>
+  PaidBy: ETS
+  AltID: 1
