tests for prog_exit

--- a/test/fixtures/exit_codes.yml
+++ b/test/fixtures/exit_codes.yml
@@ -9,3 +9,11 @@
 #
 #
 #  column: value
+
+completion:
+  ExitCode: 1849
+  ExitDiscrip: Program completion
+
+dropped:
+  ExitCode: 1829
+  ExitDiscrip: Dropped
