--- a/test/fixtures/prog_exits.yml
+++ b/test/fixtures/prog_exits.yml
@@ -13,8 +13,10 @@
 one:
   student: candidate
   program: prog
-  exit_code: completion
+  ExitCode_ExitCode: 1849
   ExitTerm: 201511
+  ExitDate: <%= Date.today %>
+  RecommendDate: <%= Date.today + 1 %>
   GPA: 3.0
   GPA_last60: 3.0
   AltID: 1
