--- a/test/fixtures/programs.yml
+++ b/test/fixtures/programs.yml
@@ -10,8 +10,8 @@
 #
 #  column: value
 
-prog:
-  EDSProgName: P-5
+# prog:
+#   EDSProgName: P-5
 
-prog2:
-  EDSProgName: Art
+# prog2:
+#   EDSProgName: Art
