--- a/test/fixtures/exit_codes.yml
+++ b/test/fixtures/exit_codes.yml
@@ -1,19 +1,53 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+one:
+  ExitCode: 1
+  ExitDiscrip: test1
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-#
-# column: value
-#
-#
-#  column: value
+two:
+  ExitCode: 2
+  ExitDiscrip: test2
 
-# completion:
-#   ExitCode: 1849
-#   ExitDiscrip: Program completion
+ExitCode_1:
+  ExitCode: 1809
+  ExitDiscrip: Unsuccessful Student Teaching
 
-# dropped:
-#   ExitCode: 1826
-#   ExitDiscrip: Dropped
+ExitCode_2:
+  ExitCode: 1810
+  ExitDiscrip: Not Passing PRAXIS Tests
+
+ExitCode_3:
+  ExitCode: 1812
+  ExitDiscrip: Transferred to another institution
+
+ExitCode_4:
+  ExitCode: 1814
+  ExitDiscrip: Death
+
+
+ExitCode_5:
+  ExitCode: 1816
+  ExitDiscrip: Advised out of Teacher Education Program
+
+
+ExitCode_6:
+  ExitCode: 1826
+  ExitDiscrip: Dropped Out
+
+
+ExitCode_7:
+  ExitCode: 1827
+  ExitDiscrip: Inadequate GPA
+
+
+ExitCode_8:
+  ExitCode: 1832
+  ExitDiscrip: Other
+
+
+ExitCode_9:
+  ExitCode: 1849
+  ExitDiscrip: Program Completion
+
+
+ExitCode_10:
+  ExitCode: 2141
+  ExitDiscrip: Transferred to another program
