fixed env variables for db login, secrets

--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  # database: eds
+  database: eds
   # username: eds
   # password: <%= ENV['EDS_DATABASE_PASSWORD'] %>
