--- a/config/database.yml
+++ b/config/database.yml
@@ -14,13 +14,12 @@ default: &default
   encoding: utf8
   pool: 5
   username: edsaccess
-  password: <%= ENV['EDSACCESS_PW'] %>
   socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
   database: eds
-
+  password: <%= ENV['EDSACCESS_PW'] %>
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
@@ -50,5 +49,5 @@ test:
 production:
   <<: *default
   database: eds
-  # username: eds
-  # password: <%= ENV['EDS_DATABASE_PASSWORD'] %>
+  password: <%= ENV['EDSACCESS_PW'] %
+>
