another fix to config/database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -49,5 +49,4 @@ test:
 production:
   <<: *default
   database: eds
-  password: <%= ENV['EDSACCESS_PW'] %
->
+  password: <%= ENV['EDSACCESS_PW'] %>
