--- a/test/fixtures/tep_advisors.yml
+++ b/test/fixtures/tep_advisors.yml
@@ -5,7 +5,8 @@
 # below each fixture, per the syntax in the comments below
 #
 #
-# column: value
-#
-#
-#  column: value
+one:
+  AdvisorBnum: B00123456
+  Salutation: "Ms."
+  username: one
+
