--- a/test/fixtures/prog_exits.yml
+++ b/test/fixtures/prog_exits.yml
@@ -16,11 +16,10 @@ one:
   Program_ProgCode: 2
   ExitCode_ExitCode: 1849
   ExitTerm: 201511
-  ExitDate: <%= Date.today %>
-  RecommendDate: <%= Date.today + 1 %>
+  ExitDate: 2015-12-17
+  RecommendDate: 2015-12-18
   GPA: 3.0
   GPA_last60: 3.0
-  
 # two:
 #   student: candidate
 #   program: prog2
