--- a/test/fixtures/tep_advisors.yml
+++ b/test/fixtures/tep_advisors.yml
@@ -5,8 +5,6 @@
 # below each fixture, per the syntax in the comments below
 #
 #
-one:
-  AdvisorBnum: B00123456
-  Salutation: "Ms."
-  username: one
-
+jon_snow:
+  Salutation: Lord Commander
+  user: jon_snow
