--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -16,8 +16,23 @@ jon_snow:
   Email: snowj@thewall.org
   Roles_idRoles: 1
 
+#advisor
+jon_arryn:
+  FirstName: John
+  LastName: Arryn
+  Email: arrynj@thehand.ironthrone.gov
+  Roles_idRoles: 2
+
+#staff
+tyrion:
+  FirstName: Tyrion
+  LastName: Lannister
+  Email: imp279@gmail.com
+  Roles_idRoles: 3
+
+#student labor
 arya_stark:
   FirstName: Arya
   LastName: Stark
   Email: noone@facelessmen.org
-  Roles_idRoles: 3
+  Roles_idRoles: 4
