--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -19,6 +19,7 @@ jon_snow:
 
 #advisor
 jon_arryn:
+  # UserName: arrynj
   FirstName: John
   LastName: Arryn
   Email: arrynj@thehand.ironthrone.gov
@@ -26,6 +27,7 @@ jon_arryn:
 
 #staff
 tyrion:
+  # UserName: imp279
   FirstName: Tyrion
   LastName: Lannister
   Email: imp279@gmail.com
@@ -33,6 +35,7 @@ tyrion:
 
 #student labor
 arya_stark:
+  # UserName: noone
   FirstName: Arya
   LastName: Stark
   Email: noone@facelessmen.org
