finished tests for praxis results completed tests for praxis results, corrected fixtures to work as expected and made minor style changes to praxis_results controller

--- a/test/fixtures/issues.yml
+++ b/test/fixtures/issues.yml
@@ -15,7 +15,7 @@
   student: candidate
   Name: issue name
   Description: description goes here
-  tep_advisors_AdvisorBnum: "B00123456"
+  tep_advisors_AdvisorBnum: "B00123456"   #TODO change me!
 
   <% if i < 2 %>
   Open: true
