fixes to student's test needed to split out tests for index, 1 for each role. Don't know why I can't loop over each role in one test

--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -16,6 +16,7 @@ candidate: &candidate
   FirstName: candidate
   LastName: candidate
   ProgStatus: Candidate
+  EnrollmentStatus: Active Student
   AltID: 2
 
 
@@ -25,6 +26,7 @@ graduate:
   FirstName: graduate
   LastName: but candidate
   EnrollmentStatus: Graduation
+  ProgStatus: Candidate
   AltID: 3
 
 #completer and graudate (with an open program)
