changed development db to eds_development

--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,7 @@ default: &default
 
 development:
   <<: *default
-  database: eds
+  database: eds_development
   password: <%= ENV['EDSACCESS_PW'] %>
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
