began fixes for student_files#index still need to make sure fake adm_st and adm_tep records aren't made since there is no real file assoicated with them

--- a/test/fixtures/adm_sts.yml
+++ b/test/fixtures/adm_sts.yml
@@ -18,3 +18,4 @@ base_app: &base
   OverallGPA: 2.75
   CoreGPA: 3.0 
   letter_file_name: "letter.docx"
+  letter_updated_at: <%= Date.strptime("10/1/2015", "%m/%d/%Y") %>
