updated tests and fixtures for clinical_site new tests and data for new attribs

--- a/test/fixtures/clinical_sites.yml
+++ b/test/fixtures/clinical_sites.yml
@@ -14,3 +14,8 @@ one:
   City: Berea
   County: Madison
   District: Maidson
+  Principal: Ms. Principal
+  email: secretary@school.com
+  website: http://www.school.com
+  receptionist: Ima Secretary
+  phone: (859) 123-4567
