rollback to old version of praxis_subtest_results uses a single fk, referencing single pk in praxis_results updated models started adding fixtures

--- a/test/fixtures/praxis_results.yml
+++ b/test/fixtures/praxis_results.yml
@@ -10,6 +10,7 @@
 #
 #  column: value
 one:
+  TestID: testid1
   student: candidate
   praxis_test: current
   TestDate: <%= Date.today %>
@@ -18,6 +19,7 @@ one:
   Pass: true
 
 two:
+  TestID: testid2
   student: base
   praxis_test: current
   TestDate: <%= Date.today %>
