--- a/test/fixtures/prog_exits.yml
+++ b/test/fixtures/prog_exits.yml
@@ -12,8 +12,8 @@
 
 one:
   student: candidate
-  Program_ProgCode: 2
-  ExitCode_ExitCode: 1849	#completer!
+  program: Program_1
+  exit_code: ExitCode_9
   ExitTerm: 201511
   ExitDate: 2015-12-17
   RecommendDate: 2015-12-18
