added Student#prog_status and supporting method: also: was_dismissed? and: latest_foi

--- a/test/fixtures/prog_exits.yml
+++ b/test/fixtures/prog_exits.yml
@@ -11,7 +11,7 @@
 #  column: value
 
 one:
-  student: candidate
+  student: grad_completer
   program: Program_1
   exit_code: ExitCode_9
   ExitTerm: 201511
