new tests and factories for new assessment models

--- a/test/fixtures/advisor_assignments.yml
+++ b/test/fixtures/advisor_assignments.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: advisor_assignments
+#
+#  id             :integer          not null, primary key
+#  student_id     :integer          not null
+#  tep_advisor_id :integer          not null
+#
+# Indexes
+#
+#  advisor_assignments_tep_advisor_id_fk                       (tep_advisor_id)
+#  index_advisor_assignments_on_student_id_and_tep_advisor_id  (student_id,tep_advisor_id) UNIQUE
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
