--- a/test/fixtures/clinical_assignments.yml
+++ b/test/fixtures/clinical_assignments.yml
@@ -1,3 +1,22 @@
+# == Schema Information
+#
+# Table name: clinical_assignments
+#
+#  student_id          :integer          not null
+#  id                  :integer          not null, primary key
+#  clinical_teacher_id :integer          not null
+#  Term                :integer          not null
+#  CourseID            :string(45)       not null
+#  Level               :string(45)
+#  StartDate           :date
+#  EndDate             :date
+#
+# Indexes
+#
+#  clinical_assignments_student_id_fk           (student_id)
+#  fk_ClinicalAssignments_ClinicalTeacher1_idx  (clinical_teacher_id)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
