--- a/test/fixtures/clinical_teachers.yml
+++ b/test/fixtures/clinical_teachers.yml
@@ -1,3 +1,22 @@
+# == Schema Information
+#
+# Table name: clinical_teachers
+#
+#  id               :integer          not null, primary key
+#  Bnum             :string(45)
+#  FirstName        :string(45)       not null
+#  LastName         :string(45)       not null
+#  Email            :string(45)
+#  Subject          :string(45)
+#  clinical_site_id :integer          not null
+#  Rank             :integer
+#  YearsExp         :integer
+#
+# Indexes
+#
+#  fk_ClinicalTeacher_ClinicalSite1_idx  (clinical_site_id)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
