--- a/test/fixtures/majors.yml
+++ b/test/fixtures/majors.yml
@@ -1,3 +1,11 @@
+# == Schema Information
+#
+# Table name: majors
+#
+#  id   :integer          not null, primary key
+#  name :string(255)
+#
+
 <% majors = ["Art",
 "Biology",
 "Chemistry",
