--- a/test/fixtures/praxis_subtest_results.yml
+++ b/test/fixtures/praxis_subtest_results.yml
@@ -1,3 +1,21 @@
+# == Schema Information
+#
+# Table name: praxis_subtest_results
+#
+#  id               :integer          not null, primary key
+#  praxis_result_id :integer          not null
+#  sub_number       :integer
+#  name             :string(255)
+#  pts_earned       :integer
+#  pts_aval         :integer
+#  avg_high         :integer
+#  avg_low          :integer
+#
+# Indexes
+#
+#  praxis_subtest_results_praxis_result_id_fk  (praxis_result_id)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
