--- a/test/fixtures/roles.yml
+++ b/test/fixtures/roles.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: roles
+#
+#  idRoles  :integer          not null, primary key
+#  RoleName :string(45)       not null
+#
+# Indexes
+#
+#  RoleName_UNIQUE  (RoleName) UNIQUE
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
