--- a/test/fixtures/student_files.yml
+++ b/test/fixtures/student_files.yml
@@ -1,3 +1,20 @@
+# == Schema Information
+#
+# Table name: student_files
+#
+#  student_id       :integer          not null
+#  id               :integer          not null, primary key
+#  active           :boolean          default(TRUE)
+#  doc_file_name    :string(100)
+#  doc_content_type :string(100)
+#  doc_file_size    :integer
+#  doc_updated_at   :datetime
+#
+# Indexes
+#
+#  student_files_student_id_fk  (student_id)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
