--- a/test/fixtures/tep_advisors.yml
+++ b/test/fixtures/tep_advisors.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: tep_advisors
+#
+#  id          :integer          not null, primary key
+#  AdvisorBnum :string(9)        not null
+#  Salutation  :string(45)       not null
+#  user_id     :integer          not null
+#
+# Indexes
+#
+#  AdvisorBnum_UNIQUE       (AdvisorBnum) UNIQUE
+#  tep_advisors_user_id_fk  (user_id)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
