--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,20 @@
+# == Schema Information
+#
+# Table name: users
+#
+#  id            :integer          not null, primary key
+#  UserName      :string(45)       not null
+#  FirstName     :string(45)       not null
+#  LastName      :string(45)       not null
+#  Email         :string(45)       not null
+#  Roles_idRoles :integer          not null
+#
+# Indexes
+#
+#  UserName_UNIQUE      (UserName) UNIQUE
+#  fk_users_Roles1_idx  (Roles_idRoles)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
