--- a/test/fixtures/praxis_tests.yml
+++ b/test/fixtures/praxis_tests.yml
@@ -3,7 +3,7 @@
 # Table name: praxis_tests
 #
 #  id               :integer          not null, primary key
-#  TestCode         :string(45)       not null
+#  TestCode  "       :"string(45)       not null
 #  TestName         :string(45)
 #  CutScore         :integer
 #  TestFamily       :string(1)
@@ -29,9 +29,10 @@
 #
 #
 #  column: value
----
--
-  TestCode: 5710
+<% enum = (1..1000).each %>
+
+<%= "test#{enum.next}:" %>
+  TestCode: "5710"
   TestName:  C-PPST Reading (computer)
   CutScore: 176
   TestFamily: 1
@@ -44,8 +45,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5712
+<%= "test#{enum.next}:" %>
+  TestCode: "5712"
   TestName:  "Core Academic Skills for Educators: Reading"
   CutScore: 156
   TestFamily: 1
@@ -58,8 +59,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 5720
+<%= "test#{enum.next}:" %>
+  TestCode: "5720"
   TestName:  C-PPST Writing (computer)
   CutScore: 174
   TestFamily: 1
@@ -72,8 +73,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5722
+<%= "test#{enum.next}:" %>
+  TestCode: "5722"
   TestName:  "Core Academic Skills for Educators: Writing"
   CutScore: 162
   TestFamily: 1
@@ -86,8 +87,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 5730
+<%= "test#{enum.next}:" %>
+  TestCode: "5730"
   TestName:  C-PPST Mathematics (computer)
   CutScore: 174
   TestFamily: 1
@@ -100,8 +101,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5732
+<%= "test#{enum.next}:" %>
+  TestCode: "5732"
   TestName:  "Core Academic Skills for Educators: Mathematics"
   CutScore: 150
   TestFamily: 1
@@ -114,8 +115,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 14
+<%= "test#{enum.next}:" %>
+  TestCode: "0014"
   TestName: "Elementary ED: Content Knowledge"
   CutScore: 148
   TestFamily: 2
@@ -128,8 +129,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 23
+<%= "test#{enum.next}:" %>
+  TestCode: "0023"
   TestName: Interdisciplinary Early Childhood Education
   CutScore: 166
   TestFamily: 2
@@ -142,8 +143,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 32
+<%= "test#{enum.next}:" %>
+  TestCode: "0032"
   TestName: "Elem Ed: Reading"
   CutScore: 165
   TestFamily: 2
@@ -156,8 +157,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 33
+<%= "test#{enum.next}:" %>
+  TestCode: "0033"
   TestName: "Elem Ed: Mathematics"
   CutScore: 164
   TestFamily: 2
@@ -170,8 +171,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 34
+<%= "test#{enum.next}:" %>
+  TestCode: "0034"
   TestName: "Elem Ed: Social Studies"
   CutScore: 155
   TestFamily: 2
@@ -184,8 +185,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 35
+<%= "test#{enum.next}:" %>
+  TestCode: "0035"
   TestName: "Elem Ed: Science"
   CutScore: 159
   TestFamily: 2
@@ -198,8 +199,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 41
+<%= "test#{enum.next}:" %>
+  TestCode: "0041"
   TestName: "English Language Literature and Composition: Content Knowledge"
   CutScore: 160
   TestFamily: 2
@@ -212,8 +213,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 42
+<%= "test#{enum.next}:" %>
+  TestCode: "0042"
   TestName: English Language, Literature and Composition Essays
   CutScore: 155
   TestFamily: 2
@@ -226,8 +227,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 44
+<%= "test#{enum.next}:" %>
+  TestCode: "0044"
   TestName: "English Lang, Lit, and Comp: Analysis"
   CutScore: 166
   TestFamily: 2
@@ -240,8 +241,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 50
+<%= "test#{enum.next}:" %>
+  TestCode: "0050"
   TestName: Technology Education
   CutScore: 600
   TestFamily: 2
@@ -254,8 +255,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 51
+<%= "test#{enum.next}:" %>
+  TestCode: "0051"
   TestName: Technology Education
   CutScore: 159
   TestFamily: 2
@@ -268,8 +269,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 61
+<%= "test#{enum.next}:" %>
+  TestCode: "0061"
   TestName: "Mathematics: Content Knowledge"
   CutScore: 125
   TestFamily: 2
@@ -282,8 +283,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 63
+<%= "test#{enum.next}:" %>
+  TestCode: "0063"
   TestName: "Mathematics: Proofs Models Problems Part 1"
   CutScore: 141
   TestFamily: 2
@@ -296,8 +297,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 69
+<%= "test#{enum.next}:" %>
+  TestCode: "0069"
   TestName: "Middle School: Mathematics"
   CutScore: 148
   TestFamily: 2
@@ -310,8 +311,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 81
+<%= "test#{enum.next}:" %>
+  TestCode: "0081"
   TestName: "Social Studies: Content Knowledge"
   CutScore: 151
   TestFamily: 2
@@ -324,8 +325,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 83
+<%= "test#{enum.next}:" %>
+  TestCode: "0083"
   TestName: "Social Studies: Interpretation of Materials"
   CutScore: 159
   TestFamily: 2
@@ -338,8 +339,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 86
+<%= "test#{enum.next}:" %>
+  TestCode: "0086"
   TestName: "Social Studies: Content and Interpretation"
   CutScore: 153
   TestFamily: 2
@@ -352,8 +353,8 @@
   Sub7: Short Content Essays
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 92
+<%= "test#{enum.next}:" %>
+  TestCode: "0092"
   TestName: "Physical ED Analysis and Design"
   CutScore: 151
   TestFamily: 2
@@ -366,8 +367,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 95
+<%= "test#{enum.next}:" %>
+  TestCode: "0095"
   TestName: "Physical Education: Content and Design"
   CutScore: 169
   TestFamily: 2
@@ -380,8 +381,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 111
+<%= "test#{enum.next}:" %>
+  TestCode: "0111"
   TestName: "Music Concepts and Processes"
   CutScore: 145
   TestFamily: 2
@@ -394,8 +395,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 113
+<%= "test#{enum.next}:" %>
+  TestCode: "0113"
   TestName: "Music: Content Knowledge"
   CutScore: 154
   TestFamily: 2
@@ -408,8 +409,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 114
+<%= "test#{enum.next}:" %>
+  TestCode: "0114"
   TestName: "Music: Content and Instruction"
   CutScore: 162
   TestFamily: 2
@@ -422,8 +423,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 135
+<%= "test#{enum.next}:" %>
+  TestCode: "0135"
   TestName: "Art: Content and Analysis"
   CutScore: 161
   TestFamily: 2
@@ -436,8 +437,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 235
+<%= "test#{enum.next}:" %>
+  TestCode: "0235"
   TestName: "Biology: Content Knowledge"
   CutScore: 146
   TestFamily: 2
@@ -450,8 +451,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 265
+<%= "test#{enum.next}:" %>
+  TestCode: "0265"
   TestName: "Physics: Content Knowledge"
   CutScore: 133
   TestFamily: 2
@@ -464,8 +465,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 439
+<%= "test#{enum.next}:" %>
+  TestCode: "0439"
   TestName: "Middle School: Science"
   CutScore: 144
   TestFamily: 2
@@ -478,8 +479,8 @@
   Sub7: Short-Answer Essays
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 522
+<%= "test#{enum.next}:" %>
+  TestCode: "0522"
   TestName: "PLT: Grades K-6"
   CutScore: 161
   TestFamily: 2
@@ -492,8 +493,8 @@
   Sub7: "Teacher Professionalism: Case Histories/Short Answer Questions"
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 523
+<%= "test#{enum.next}:" %>
+  TestCode: "0523"
   TestName: "PLT: Grades 5-9"
   CutScore: 161
   TestFamily: 2
@@ -506,8 +507,8 @@
   Sub7: "Teacher Professionalism: Case Histories/Short Answer Questions"
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 524
+<%= "test#{enum.next}:" %>
+  TestCode: "0524"
   TestName: "PLT: Grades 7-12"
   CutScore: 161
   TestFamily: 2
@@ -520,8 +521,8 @@
   Sub7: "Teacher Professionalism: Case Histories/Short Answer Questions"
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 622
+<%= "test#{enum.next}:" %>
+  TestCode: "0622"
   TestName: "PLT: Grades K-6"
   CutScore: 160
   TestFamily: 2
@@ -534,8 +535,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 623
+<%= "test#{enum.next}:" %>
+  TestCode: "0623"
   TestName: "PLT: Grades 5-9"
   CutScore: 160
   TestFamily: 2
@@ -548,8 +549,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 624
+<%= "test#{enum.next}:" %>
+  TestCode: "0624"
   TestName: "PLT: Grades 7-12"
   CutScore: 160
   TestFamily: 2
@@ -562,8 +563,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 856
+<%= "test#{enum.next}:" %>
+  TestCode: "0856"
   TestName: "Health and Physical Education: Content Knowledge"
   CutScore: 156
   TestFamily: 2
@@ -576,8 +577,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5032
+<%= "test#{enum.next}:" %>
+  TestCode: "5032"
   TestName: "Elem Ed: Reading"
   CutScore: 165
   TestFamily: 2
@@ -590,8 +591,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5033
+<%= "test#{enum.next}:" %>
+  TestCode: "5033"
   TestName: "Elem Ed: Mathematics"
   CutScore: 164
   TestFamily: 2
@@ -604,8 +605,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5034
+<%= "test#{enum.next}:" %>
+  TestCode: "5034"
   TestName: "Elem Ed: Social Studies"
   CutScore: 155
   TestFamily: 2
@@ -618,8 +619,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5035
+<%= "test#{enum.next}:" %>
+  TestCode: "5035"
   TestName: "Elem Ed: Science"
   CutScore: 159
   TestFamily: 2
@@ -632,8 +633,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5039
+<%= "test#{enum.next}:" %>
+  TestCode: "5039"
   TestName: "English Language Arts: Content and Analysis"
   CutScore: 168
   TestFamily: 2
@@ -646,8 +647,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5044
+<%= "test#{enum.next}:" %>
+  TestCode: "5044"
   TestName: "English Lang, Lit, and Comp: Analysis"
   CutScore: 166
   TestFamily: 2
@@ -660,8 +661,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 5051
+<%= "test#{enum.next}:" %>
+  TestCode: "5051"
   TestName: Technology Education
   CutScore: 159
   TestFamily: 2
@@ -674,8 +675,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5061
+<%= "test#{enum.next}:" %>
+  TestCode: "5061"
   TestName: "Mathematics: Content Knowledge"
   CutScore: 125
   TestFamily: 2
@@ -688,8 +689,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 5063
+<%= "test#{enum.next}:" %>
+  TestCode: "5063"
   TestName: "Mathematics: Proofs Models Problems Part 1"
   CutScore: 141
   TestFamily: 2
@@ -702,8 +703,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 5069
+<%= "test#{enum.next}:" %>
+  TestCode: "5069"
   TestName: "Middle School: Mathematics"
   CutScore: 148
   TestFamily: 2
@@ -716,8 +717,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
--
-  TestCode: 5086
+<%= "test#{enum.next}:" %>
+  TestCode: "5086"
   TestName: "Social Studies: Content and Interpretation"
   CutScore: 153
   TestFamily: 2
@@ -730,8 +731,8 @@
   Sub7: Short Content Essays
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5095
+<%= "test#{enum.next}:" %>
+  TestCode: "5095"
   TestName: "Physical Education: Content and Design"
   CutScore: 169
   TestFamily: 2
@@ -744,8 +745,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5114
+<%= "test#{enum.next}:" %>
+  TestCode: "5114"
   TestName: "Music: Content and Instruction"
   CutScore: 162
   TestFamily: 2
@@ -758,8 +759,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5135
+<%= "test#{enum.next}:" %>
+  TestCode: "5135"
   TestName: "Art: Content and Analysis"
   CutScore: 161
   TestFamily: 2
@@ -772,8 +773,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5161
+<%= "test#{enum.next}:" %>
+  TestCode: "5161"
   TestName: "Mathematics: Content Knowledge"
   CutScore: 160
   TestFamily: 2
@@ -786,8 +787,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5235
+<%= "test#{enum.next}:" %>
+  TestCode: "5235"
   TestName: "Biology: Content Knowledge"
   CutScore: 146
   TestFamily: 2
@@ -800,8 +801,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5265
+<%= "test#{enum.next}:" %>
+  TestCode: "5265"
   TestName: "Physics: Content Knowledge"
   CutScore: 133
   TestFamily: 2
@@ -814,8 +815,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5439
+<%= "test#{enum.next}:" %>
+  TestCode: "5439"
   TestName: "Middle School: Science"
   CutScore: 144
   TestFamily: 2
@@ -828,8 +829,8 @@
   Sub7: Short-Answer Essays
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5622
+<%= "test#{enum.next}:" %>
+  TestCode: "5622"
   TestName: "PLT: Grades K-6"
   CutScore: 160
   TestFamily: 2
@@ -842,8 +843,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5623
+<%= "test#{enum.next}:" %>
+  TestCode: "5623"
   TestName: "PLT: Grades 5-9"
   CutScore: 160
   TestFamily: 2
@@ -856,8 +857,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5624
+<%= "test#{enum.next}:" %>
+  TestCode: "5624"
   TestName: "PLT: Grades 7-12"
   CutScore: 160
   TestFamily: 2
@@ -870,8 +871,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5856
+<%= "test#{enum.next}:" %>
+  TestCode: "5856"
   TestName: "Health and Physical Education: Content Knowledge"
   CutScore: 156
   TestFamily: 2
@@ -884,8 +885,8 @@
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 0
--
-  TestCode: 5169
+<%= "test#{enum.next}:" %>
+  TestCode: "5169"
   TestName: Middle School Mathematics
   CutScore: 165
   TestFamily: 2
