--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 
+
+#not checking in database.yaml since different deployments need to configure it differently (c9.io users)
+/config/database.yml
+
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
 config/secrets.yml
