--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -12,14 +12,20 @@
 #  EnrollmentStatus :string(45)
 #  Classification   :string(45)
 #  CurrentMajor1    :string(45)
+#  concentration1   :string(255)
 #  CurrentMajor2    :string(45)
-#  TermMajor        :integer
-#  PraxisICohort    :string(45)
-#  PraxisIICohort   :string(45)
+#  concentration2   :string(255)
 #  CellPhone        :string(45)
 #  CurrentMinors    :string(45)
 #  Email            :string(100)
 #  CPO              :string(45)
+#  withdrawals      :text
+#  term_graduated   :integer
+#  gender           :string(255)
+#  race             :string(255)
+#  hispanic         :boolean
+#  term_expl_major  :integer
+#  term_major       :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
