--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
+.DS_Store
 
 
 #not checking in database.yaml since different deployments need to configure it differently (c9.io users)
