add tests for new features in issue_update controller
added tests to match
updated fixture to call an advisor and include addressed

--- a/test/fixtures/issue_updates.yml
+++ b/test/fixtures/issue_updates.yml
@@ -30,5 +30,7 @@
   UpdateName: Update1
   Description: Update1 Description
   issue: issue1
-  tep_advisors_AdvisorBnum: B00123456
+  # tep_advisors_AdvisorBnum: B00123456
+  tep_advisor: snow_advisor
+  addressed: false 
 <% end %>
