adds sundry changes to config for rails 4.2 upgrade

--- a/test/fixtures/clinical_teachers.yml
+++ b/test/fixtures/clinical_teachers.yml
@@ -30,7 +30,7 @@ base: &base
   FirstName: Jacob
   LastName: Stoebel
   Email: jacob.stoebel@berea.edu
-  subject: English
+  Subject: English
   clinical_site: one
   Rank: 1
   YearsExp: 1
