Index, create, show actions for item_levels

--- a/test/fixtures/assessments.yml
+++ b/test/fixtures/assessments.yml
@@ -1,10 +1,11 @@
+
 # == Schema Information
 #
 # Table name: assessments
 #
 #  id          :integer          not null, primary key
 #  name        :string(255)
-#  description :text
+#  description :text(65535)
 #  created_at  :datetime
 #  updated_at  :datetime
 #
