--- a/test/fixtures/tep_advisors.yml
+++ b/test/fixtures/tep_advisors.yml
@@ -8,6 +8,7 @@
 #  user_id     :integer
 #  first_name  :string(255)      not null
 #  last_name   :string(255)      not null
+#  email       :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
